<resources>
    <string name="app_name">Return in time</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title">Title *</string>
    <string name="mandatory_field">* indicates required field</string>
    <string name="add_button">Add</string>
    <string name="text_leave_screen">Leave the screen ?</string>
    <string name="text_leave_message">Changes may not be saved.</string>
    <string name="text_stay_title">STAY</string>
    <string name="text_leave_title">LEAVE</string>
    <string name="text_slash">/</string>
    <string name="toolbar_add_item_title">Add Item</string>
    <string name="text_delete_items_title">Delete Item(s)?</string>
    <string name="text_delete_items_message">The item(s) will be permanently deleted. Changes made cannot be reverted</string>
    <string name="text_cancel_button_title">Cancel</string>
    <string name="text_delete_button_title">DELETE</string>
    <string name="text_no_items_selected">There are no items selected to delete</string>
    <string name="delete_db_selection"> LIKE ?</string>
    <string name="text_share_type">text/plain</string>
    <string name="text_share_initial">Item is already deleted</string>
    <string name="text_share_title">Title: </string>
    <string name="text_share_item_type"> Type: </string>
    <string name="text_details_title">Item Details</string>
    <string name="text_item_deleted">Item is already deleted</string>
    <string name="text_item_updating_problem">There was a problem updating the item</string>
    <string name="text_item_update_successfull">Item is successfully updated</string>
    <string name="text_edit_fragment_title">Edit Item</string>
    <string name="contextual_initial_title">0 Items are selected</string>
    <string name="contextual_items_selected">Item(s) are selected</string>
    <string name="empty_list_text">Add Items to get started. Never miss the deadline!</string>
    <string name="app_title">Return in time</string>
    <string name="delete_successfull">Selected Items are successfully deleted</string>
    <string name="delete_failure_part_one">Error deleting the items. Only</string>
    <string name="delete_failure_part_two">are deleted</string>
    <string name="text_items_selected_toast">Please select the items to be deleted</string>
    <string name="exception_send_to_detail">must implement SendToDetailFragment interface</string>
    <string name="exception_add_book">must implement AddBookInterface</string>
    <string name="text_items_added">Item added to the list</string>
    <string name="error_inserting">Error while inserting item</string>
    <string name="enter_mandatory_fields">Please enter all the mandatory fields</string>
    <string name="exception_send_to_text">must implement SendDateTotext interface</string>
    <string name="exception_delete_interface">must implement DeleteInterface interface</string>
    <string name="exception_main_message">Cannot cast to MainActivity</string>
    <string name="error_deleting_toast">Error deleting the item</string>
    <string name="exception_detail_activity">must implement SendToDetailActivity interface</string>
    <string name="notification_title">Return Item Today</string>
    <string name="hint_type">Type (eg: Book, Money, Car, Bills) *</string>
    <string name="hint_return_to">Return To (eg: Name, Library) *</string>
    <string name="hint_start_date">Start Date (MM/DD/YYYY) *</string>
    <string name="hint_end_date">End Date (MM/DD/YYYY) *</string>
    <string name="hint_notify_date">Notify Date (MM/DD/YYYY)</string>
    <string name="return_to">Return To: </string>
    <string name="borrowed_on">Borrowed On: </string>
    <string name="return_by">Return By: </string>
    <string name="notify_me_on">Notify Me On: </string>
    <string name="save">Save</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="requested_index_failed">Requested an index of -1</string>
    <string name="pile_of_books">Pile of Books</string>
    <string name="text_checkout">Checkout this!</string>
    <string name="text_flight">flight</string>
    <string name="text_travel">travel</string>
    <string name="text_book">book</string>
    <string name="text_bills">bills</string>
    <string name="text_pay">pay</string>
    <string name="text_assignment">assignment</string>
    <string name="text_workout">workout</string>
    <string name="text_gym">gym</string>
    <string name="text_swim">swim</string>
    <string name="return_date_share">Return Date:</string>
</resources>
